--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,70 +1,67 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import { Image } from "@astrojs/image/components";
-
-type TQuiz = { img: string; faculty: string; id: string }[];
-
-const res = await fetch("https://kostixoxo.github.io/data.json");
-const { cards }: { cards: TQuiz } = await res.json();
-
-let step = 0;
-let result = "";
+import Quiz from "../components/Quiz";
 ---
 
 <Layout title="UPP Quiz">
   <main>
     <h1>Wybierz które zdjęcie ci sie najbardziej podoba</h1>
     <div class="cards">
-      {
-        cards.map((card) => (
+      <!-- {
+        rounds[step].map((card) => (
           <div class="card">
             <Image
               src={import("../src/assets/" + card.img)}
               alt=""
               width={200}
               aspectRatio="4:3"
+              style={{ objectFit: "cover" }}
             />
           </div>
         ))
       }
+    </div> -->
+      <Quiz client:load />
+      <!-- <div class="result">
+        {
+          step === 1 && (
+            <Image
+              src={import("../src/assets/" + result)}
+              alt=""
+              width={200}
+              aspectRatio="4:3"
+            />
+          )
+        }
+      </div>
+    </div> -->
     </div>
-    <div class="result">
-      {
-        step === 1 && (
-          <Image
-            src={import("../src/assets/" + result)}
-            alt=""
-            width={200}
-            aspectRatio="4:3"
-          />
-        )
+
+    <style>
+      main {
+        margin: auto;
+        padding: 1.5rem;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
       }
-    </div>
+      h1 {
+        font-size: 3rem;
+        font-weight: 400;
+        margin: 0;
+        text-align: center;
+      }
+      .cards {
+        width: max-content;
+        margin-inline: auto;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 1rem;
+      }
+      .card {
+        cursor: pointer;
+      }
+    </style>
   </main>
 </Layout>
-
-<style>
-  main {
-    margin: auto;
-    padding: 1.5rem;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-  }
-  h1 {
-    font-size: 3rem;
-    font-weight: 400;
-    margin: 0;
-    text-align: center;
-  }
-  .cards {
-    width: max-content;
-    margin-inline: auto;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 1rem;
-  }
-  .card {
-    cursor: pointer;
-  }
-</style>
