--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,66 +1,26 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import { Image } from "@astrojs/image/components";
 import Quiz from "../components/Quiz";
 ---
 
-<Layout title="UPP Quiz">
+<Layout title="UP Quiz">
   <main>
     <h1>Wybierz które zdjęcie ci sie najbardziej podoba</h1>
-    <div class="cards">
-      <!-- {
-        rounds[step].map((card) => (
-          <div class="card">
-            <Image
-              src={import("../src/assets/" + card.img)}
-              alt=""
-              width={200}
-              aspectRatio="4:3"
-              style={{ objectFit: "cover" }}
-            />
-          </div>
-        ))
-      }
-    </div> -->
-      <Quiz client:load />
-      <!-- <div class="result">
-        {
-          step === 1 && (
-            <Image
-              src={import("../src/assets/" + result)}
-              alt=""
-              width={200}
-              aspectRatio="4:3"
-            />
-          )
-        }
-      </div>
-    </div> -->
-    </div>
+    <Quiz client:load />
 
     <style>
       main {
         margin: auto;
-        padding: 1.5rem;
         display: flex;
         flex-direction: column;
-        gap: 1rem;
+        gap: 2rem;
+        padding-block: 1rem 3rem;
       }
       h1 {
-        font-size: 3rem;
-        font-weight: 400;
+        font-size: 2.5rem;
         margin: 0;
+        font-weight: 400;
         text-align: center;
-      }
-      .cards {
-        width: max-content;
-        margin-inline: auto;
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 1rem;
-      }
-      .card {
-        cursor: pointer;
       }
     </style>
   </main>
